fixed 'live site' link on mobile

--- a/css/components/_mediaQueries.scss
+++ b/css/components/_mediaQueries.scss
@@ -50,6 +50,7 @@
       
       &__buttons {
         align-self: center;
+        display: block;
       }
     }
   }
